# Razor

./: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
backend/: tsconfig.json
backend/src/: auth.ts  server.ts  store.ts
components/: CalendarScheduler.tsx  CourseCard.tsx  CoursesManager.tsx  ProgressBar.tsx  RiskBadge.tsx  StatsSummary.tsx  SubjectPlanner.tsx  TaskList.tsx  TodayPlan.tsx
lib/: autoScheduler.ts  schedule.ts  seedData.ts  storage.ts  types.ts
prisma/: schema.prisma
scripts/: debug-scheduler.mjs  setup-db.mjs  verify-scheduler.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
