[package]
name = "razor"
version = "0.1.0"
description = "A local-first personal study tracker desktop app."
authors = ["Razor"]
edition = "2021"

[lib]
name = "razor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
